# openlmi-providers

./: Makefile  README.md  openlmi-providers-0.4.2-dont-autofill-fsname-fsclassname.patch  openlmi-providers-0.4.2-fan-make-the-sprintf_chip_name-thread-safe.patch  openlmi-providers-0.4.2-logicalfile-socket-getinstance.patch  openlmi-providers-0.4.2-methods-description.patch  openlmi-providers-0.4.2-proper-method-result.patch  openlmi-providers-0.4.2-require-libuser-0.60.patch  openlmi-providers-0.4.2-system_name_verification.patch  openlmi-providers-0.4.2-thread-unsafe.patch  openlmi-providers-0.5.0-fix-mof-register-traceback.patch  openlmi-providers-0.5.0-instantiable-services.patch  openlmi-providers.spec
src/: .reviewboardrc  CMakeLists.txt  README  make-release.sh  make-rpm.sh  nosetests.cfg  openlmi-mof-register  openlmi-providers.spec
src/cmake/modules/: FindLMSensors.cmake  FindOpenLMI.cmake  FindOpenLMIIndManager.cmake  OpenLMIMacros.cmake
src/doc/: cim-provider-howto.md
src/doc/admin/: CMakeLists.txt  README  conf.py
src/examples/: test_account.py  test_power.py  test_service.py
src/mof/: 05_LMI_Qualifiers.mof  30_LMI_Jobs.mof  50_LMI_LogicalFile.mof  60_LMI_Account.mof  60_LMI_Fan.mof  60_LMI_Hardware.mof  60_LMI_Journald.mof  60_LMI_Locale.mof  60_LMI_LogicalFile.mof  60_LMI_PCP.mof  60_LMI_PowerManagement.mof  60_LMI_Realmd.mof  60_LMI_SSSD.mof  60_LMI_Service-legacy.mof  60_LMI_Service.mof  60_LMI_Software-dbus.cmake  60_LMI_Software.mof  60_LMI_Software.mof.in  60_LMI_Software_MethodParameters.mof  70_LMI_JournaldIndicationFilters.mof  70_LMI_SoftwareIndicationFilters.mof  CMakeLists.txt  LMI_Software.reg  README
src/src/: CMakeLists.txt  globals.h  openlmi.c  openlmi.conf  openlmi.h  openlmi.pc.in
src/src/account/: 90_LMI_Account_Profile.mof.skel  CMakeLists.txt  LMI_AccountCapabilitiesProvider.c  LMI_AccountInstanceCreationIndicationProvider.c  LMI_AccountInstanceDeletionIndicationProvider.c  LMI_AccountManagementCapabilitiesProvider.c  LMI_AccountManagementServiceCapabilitiesProvider.c  LMI_AccountManagementServiceProvider.c  LMI_AccountManagementServiceSettingDataProvider.c  LMI_AccountOnSystemProvider.c  LMI_AccountProvider.c  LMI_AccountSettingDataProvider.c  LMI_AssignedAccountIdentityProvider.c  LMI_AssignedGroupIdentityProvider.c  LMI_EnabledAccountCapabilitiesProvider.c  LMI_GroupProvider.c  LMI_HostedAccountManagementServiceProvider.c  LMI_IdentityProvider.c  LMI_MemberOfGroupProvider.c  LMI_OwningGroupProvider.c  LMI_ServiceAffectsIdentityProvider.c  LMI_SettingsDefineAccountCapabilitiesProvider.c  LMI_SettingsDefineManagementCapabilitiesProvider.c  account_globals.c  account_globals.h  aux_lu.c  aux_lu.h  indication_common.c  indication_common.h  lock.c  lock.h  macros.h
src/src/fan/: 90_LMI_Fan_Profile.mof.skel  CMakeLists.txt  LMI_FanAssociatedSensorProvider.c  LMI_FanProvider.c  LMI_FanSensorProvider.c  README  fan.c  fan.h
src/src/hardware/: 90_LMI_Hardware_Profile.mof.skel  90_LMI_Hardware_Profile_DMTF.mof  CMakeLists.txt  LMI_AssociatedProcessorCacheMemoryProvider.c  LMI_BaseboardContainerProvider.c  LMI_BaseboardProvider.c  LMI_BatteryPhysicalPackageProvider.c  LMI_BatteryProvider.c  LMI_BatterySystemDeviceProvider.c  LMI_ChassisComputerSystemPackageProvider.c  LMI_ChassisProvider.c  LMI_DiskDriveATAPortProvider.c  LMI_DiskDriveATAProtocolEndpointProvider.c  LMI_DiskDriveDeviceSAPImplementationProvider.c  LMI_DiskDriveElementSoftwareIdentityProvider.c  LMI_DiskDriveProvider.c  LMI_DiskDriveRealizesProvider.c  LMI_DiskDriveSAPAvailableForElementProvider.c  LMI_DiskDriveSoftwareIdentityProvider.c  LMI_DiskDriveSystemDeviceProvider.c  LMI_DiskPhysicalPackageContainerProvider.c  LMI_DiskPhysicalPackageProvider.c  LMI_Hardware.h  LMI_MemoryPhysicalPackageInConnectorProvider.c  LMI_MemoryPhysicalPackageProvider.c  LMI_MemoryProvider.c  LMI_MemorySlotContainerProvider.c  LMI_MemorySlotProvider.c  LMI_MemorySystemDeviceProvider.c  LMI_PCIBridgeProvider.c  LMI_PCIBridgeSystemDeviceProvider.c  LMI_PCIDeviceProvider.c  LMI_PCIDeviceSystemDeviceProvider.c  LMI_PhysicalBatteryContainerProvider.c  LMI_PhysicalBatteryRealizesProvider.c  LMI_PhysicalMemoryContainerProvider.c  LMI_PhysicalMemoryProvider.c  LMI_PhysicalMemoryRealizesProvider.c  LMI_PointingDeviceProvider.c  LMI_PortPhysicalConnectorContainerProvider.c  (+30 more)
src/src/indmanager/: CMakeLists.txt  README  ind_manager.c  ind_manager.h  openlmiindmanager.pc.in
src/src/journald/: 90_LMI_Journald_Profile.mof.skel  CMakeLists.txt  LMI_JournalLogRecordInstanceCreationIndicationProvider.c  LMI_JournalLogRecordProvider.c  LMI_JournalMessageLogProvider.c  LMI_JournalRecordInLogProvider.c  README  cmpiLMI_Journald-cimprovagt  instutil.c  instutil.h  journal.c  journal.h
src/src/locale/: 90_LMI_Locale_Profile.mof.skel  CMakeLists.txt  LMI_LocaleProvider.c  localed.c  localed.h
src/src/logicalfile/: 90_LMI_LogicalFile_Profile.mof.skel  CMakeLists.txt  LMI_DataFileProvider.c  LMI_DirectoryContainsFileProvider.c  LMI_FIFOPipeFileProvider.c  LMI_FileIdentityProvider.c  LMI_RootDirectoryProvider.c  LMI_SymbolicLinkProvider.c  LMI_UnixDeviceFileProvider.c  LMI_UnixDirectoryProvider.c  LMI_UnixFileProvider.c  LMI_UnixSocketProvider.c  file.c  file.h
src/src/pcp/: CMakeLists.txt  README  openlmi-pcp-generate  openlmi-pcp-generate.in  openlmi-pcp.cron  setup.py
src/src/power/: 90_LMI_PowerManagement_Profile.mof.skel  CMakeLists.txt  LMI_AssociatedPowerManagementServiceProvider.c  LMI_ElementCapabilitiesProvider.c  LMI_HostedPowerManagementServiceProvider.c  LMI_PowerConcreteJobProvider.c  LMI_PowerManagementCapabilitiesProvider.c  LMI_PowerManagementServiceProvider.c  cmpiLMI_PowerManagement-cimprovagt  power.c  power.h
src/src/python/: setup.py
src/src/realmd/: 90_LMI_Realmd_Profile.mof.skel  CMakeLists.txt  LMI_HostedRealmdServiceProvider.c  LMI_RealmdServiceProvider.c  README  cmpiLMI_Realmd-cimprovagt  rdcp_dbus.c  rdcp_dbus.h  (+5 more)
src/tools/: CMakeLists.txt  cim2dot.py  cim2uml.py  class2dot.py  class2html.py  cql.py  mof.css  mof2wiki.sh  openlmi-doc-class2rst  openlmi-doc-class2uml
(+260 files in other folders)
